# agymcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/agymcp/: __init__.py  cli.py  core.py  doctor.py  server.py
tests/: test_core.py
