[project]
name = "agymcp"
version = "0.1.0"
description = "将 Google Antigravity CLI agy 封装为 MCP stdio 服务"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "agy-mcp contributors" },
]
dependencies = [
    "mcp[cli]>=1.21.2",
    "pydantic>=2.0",
]

[project.scripts]
agymcp = "agymcp.cli:main"
agy-doctor = "agymcp.doctor:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agymcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

